tree-sitter-ghc-cmm/test/corpus/basic.txt
================================
Proc with info table, statements, and a data section
================================

==================== Output Cmm ====================
[fun() { //  [R2]
         { info_tbls: []
           stack_info: arg_space: 8
         }
     {offset
       c1: // global
           _c2::F64 = %MO_F_Add_W64(D1, 12.345 :: W64);
           I64[Sp - 8] = c1;
           if (Hp > HpLim) (likely: False) goto c3; else goto c4;
       c3: // global
           call (P64[Sp])(R1) args: 8, res: 0, upd: 8;
     }
 },
 section ""data" . fun_closure" {
     fun_closure:
         const fun_info;
 }]

--------------------------------

(source_file
  (banner)
  (cmm_group
    (proc
      name: (identifier)
      (comment)
      (info_table)
      (offset_body
        (block
          (label
            name: (identifier))
          (comment)
          (assignment
            lhs: (typed_expr
              (identifier)
              (cmm_type))
            rhs: (machop_call
              (machop)
              (identifier)
              (typed_expr
                (literal)
                (cmm_type))))
          (assignment
            lhs: (mem_access
              (cmm_type)
              address: (binary_expr
                (identifier)
                (binop)
                (literal)))
            rhs: (identifier))
          (cond_branch
            condition: (binary_expr
              (identifier)
              (binop)
              (identifier))
            (likely)
            consequence: (identifier)
            alternative: (identifier)))
        (block
          (label
            name: (identifier))
          (comment)
          (call
            target: (mem_access
              (cmm_type)
              address: (identifier))
            (identifier)))))
    (data_section
      name: (section_name)
      (block
        (label
          name: (identifier))
        (const_statement
          (identifier))))))

================================
String / byte-array data (CmmString)
================================

==================== Output Cmm ====================
[section ""cstring" . m_bytes" {
     m_bytes:
         I8[] "main"
 }]

--------------------------------

(source_file
  (banner)
  (cmm_group
    (data_section
      name: (section_name)
      (block
        (label
          name: (identifier))
        (byte_array
          (cmm_type))))))

================================
Switch statement (pre-codegen)
================================

==================== Cmm produced by codegen ====================
[f() { //  []
         { info_tbls: []
           stack_info: arg_space: 8
         }
     {offset
       c1: // global
           switch [0 .. 1] _s::I64 {
               case 0 : goto c2;
               default: {goto c3;}
           }
     }
 }]

--------------------------------

(source_file
  (banner)
  (cmm_group
    (proc
      name: (identifier)
      (comment)
      (info_table)
      (offset_body
        (block
          (label
            name: (identifier))
          (comment)
          (switch
            scrutinee: (typed_expr
              (identifier)
              (cmm_type))
            (switch_case
              (goto
                target: (identifier)))
            (switch_case
              (goto
                target: (identifier)))))))))

================================
Inline static info table (pre-codegen statics)
================================

==================== Cmm produced by codegen ====================
[section ""data" . m_closure" {
     m_closure: label: GHC.Types.TrNameS_con_info
                rep: HeapRep static { Con {tag: 0 descr:"x"} }
                srt: Nothing CCS_DONT_CARE [m_bytes]
 }]

--------------------------------

(source_file
  (banner)
  (cmm_group
    (data_section
      name: (section_name)
      (block
        (label
          name: (identifier))
        (static_info)))))

================================
Bare offset graph with unwind (pipeline-stage dump)
================================

==================== Sink assignments ====================

{offset
  c1: // global
      unwind Sp = Just Sp;
      R1 = R1 + 2;
      call (P64[Sp])(R1) args: 8, res: 0, upd: 8;
}

--------------------------------

(source_file
  (banner)
  (offset_body
    (block
      (label
        name: (identifier))
      (comment)
      (unwind
        (identifier)
        (identifier))
      (assignment
        lhs: (identifier)
        rhs: (binary_expr
          (identifier)
          (binop)
          (literal)))
      (call
        target: (mem_access
          (cmm_type)
          address: (identifier))
        (identifier)))))

================================
CAFEnv analysis dump (-ddump-cmm-caf)
================================

==================== CAFEnv ====================
[(c1ka, {block_c1ka_closure}), (c1kd, {block_c1ka_closure, Bindings.poly_closure}),
 (c1kz, {})]

--------------------------------

(source_file
  (banner)
  (caf_env
    (caf_entry
      label: (identifier)
      (caf_set
        (identifier)))
    (caf_entry
      label: (identifier)
      (caf_set
        (identifier)
        (identifier)))
    (caf_entry
      label: (identifier)
      (caf_set))))
